fixes searchbar algo

--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
 </head>
 <body>
   <h2 class="header">Top US News Stories</h2>
-
   <div class="search-engine">
     <span class="search-header">NYT Search Engine:</span>
     <input
       type="text"
-      name="searchBar"
-      id="searchBar"
+      name="search-bar"
+      id="search-bar"
       placeholder="Please Enter a News Catagory"
     />
     <span><i class="fas fa-search"></i></span>
   </div>
-
   <div class="article-container">
     <div id="article-row" class="row"> </div>
   </div>
-
   <script src="public/js/app.js"></script>
   <script src="public/js/searchEngine.js"></script>
 </body>
