pushes new font family

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <h2 class="header">Top US News Stories</h2>
-  <div class="search-engine">
-    <span class="search-header">NYT Search Engine:</span>
+  <div class="search-engine row">
+    <div class="search-header">NYT Search Engine:</div>
     <input
       type="text"
       name="search-bar"
