checks over syntax

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       type="text"
       name="search-bar"
       id="search-bar"
-      placeholder="Please Enter a News Catagory"
+      placeholder="Please Enter a News Topic"
     />
   </div>
   <div class="article-container">
-    <div id="article-row" class="row"> </div>
+    <div id="article-row" class="row"></div>
   </div>
   <script src="public/js/app.js"></script>
   <script src="public/js/searchEngine.js"></script>
